--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ezzy Links Hub</title>
+  <title>EzzyVerse Quick Links</title>
   <style>
     body {
       margin: 0;
@@ -32,7 +32,7 @@
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 30px;
       width: 80%;
-      max-width: 700px;
+      max-width: 800px;
     }
 
     .link-item {
@@ -102,6 +102,16 @@
     <a class="link-item" href="https://github.com" target="_blank">
       <img src="images/github.png" alt="GitHub" />
       <span>GitHub</span>
+    </a>
+
+    <a class="link-item" href="https://chat.openai.com" target="_blank">
+      <img src="images/chatgpt.png" alt="ChatGPT" />
+      <span>ChatGPT</span>
+    </a>
+
+    <a class="link-item" href="https://gemini.google.com" target="_blank">
+      <img src="images/gemini.png" alt="Gemini" />
+      <span>Gemini</span>
     </a>
   </div>
 
