--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url("images/background.jpg") no-repeat center center fixed;
+      background: url("images/background.png") no-repeat center center fixed;
       background-size: cover;
       font-family: "Poppins", Arial, sans-serif;
       display: flex;
