--- a/index.html
+++ b/index.html
@@ -1,120 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EzzyVerse Quick Links</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChromeHome by HoumyVerse</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: url("images/background.png") no-repeat center center fixed;
-      background-size: cover;
-      font-family: "Poppins", Arial, sans-serif;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: url('images/background.jpg') no-repeat center center/cover;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      letter-spacing: 1px;
+    }
+    .links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 30px;
+    }
+    .links a {
+      text-decoration: none;
+      color: white;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      backdrop-filter: blur(6px);
+      transition: transform 0.2s ease;
     }
-
-    h1 {
-      color: white;
-      text-shadow: 0 2px 10px rgba(0,0,0,0.6);
-      margin-bottom: 40px;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-
-    .link-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 30px;
-      width: 80%;
-      max-width: 800px;
-    }
-
-    .link-item {
-      text-align: center;
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
-
-    .link-item:hover {
+    .links a:hover {
       transform: scale(1.1);
-      filter: brightness(1.2);
     }
-
-    .link-item img {
-      width: 100px;
-      height: 100px;
-      object-fit: contain;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    .links img {
+      width: 80px;
+      height: 80px;
+      border-radius: 15px;
+      margin-bottom: 8px;
     }
-
-    .link-item span {
-      display: block;
+    hr {
+      width: 60%;
+      border: 1px solid rgba(255, 255, 255, 0.4);
+      margin: 30px auto;
+    }
+    .references {
       margin-top: 10px;
-      color: #fff;
-      font-size: 1rem;
-      font-weight: 500;
-      text-shadow: 0 1px 3px rgba(0,0,0,0.6);
     }
-
-    footer {
-      position: fixed;
-      bottom: 10px;
-      color: rgba(255,255,255,0.7);
-      font-size: 0.8rem;
+    .references a {
+      color: #a8d8ff;
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .references a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>EzzyVerse Quick Links</h1>
+  <h1>🌐 ChromeHome by HoumyVerse</h1>
 
-  <div class="link-grid">
-    <a class="link-item" href="https://www.midjourney.com" target="_blank">
-      <img src="images/midjourney.png" alt="MidJourney" />
-      <span>MidJourney</span>
-    </a>
-
-    <a class="link-item" href="https://www.suno.ai" target="_blank">
-      <img src="images/suno.png" alt="Suno" />
-      <span>Suno</span>
-    </a>
-
-    <a class="link-item" href="https://www.runwayml.com" target="_blank">
-      <img src="images/runway.png" alt="Runway" />
-      <span>Runway</span>
-    </a>
-
-    <a class="link-item" href="https://www.capcut.com" target="_blank">
-      <img src="images/capcut.png" alt="CapCut" />
-      <span>CapCut</span>
-    </a>
-
-    <a class="link-item" href="https://discord.com" target="_blank">
-      <img src="images/discord.png" alt="Discord" />
-      <span>Discord</span>
-    </a>
-
-    <a class="link-item" href="https://github.com" target="_blank">
-      <img src="images/github.png" alt="GitHub" />
-      <span>GitHub</span>
-    </a>
-
-    <a class="link-item" href="https://chat.openai.com" target="_blank">
-      <img src="images/chatgpt.png" alt="ChatGPT" />
-      <span>ChatGPT</span>
-    </a>
-
-    <a class="link-item" href="https://gemini.google.com" target="_blank">
-      <img src="images/gemini.png" alt="Gemini" />
-      <span>Gemini</span>
-    </a>
+  <div class="links">
+    <a href="https://www.midjourney.com/home"><img src="images/midjourney.png" alt="MidJourney"><span>MidJourney</span></a>
+    <a href="https://suno.ai"><img src="images/suno.png" alt="Suno"><span>Suno</span></a>
+    <a href="https://runwayml.com"><img src="images/runway.png" alt="Runway"><span>Runway</span></a>
+    <a href="https://www.capcut.com"><img src="images/capcut.png" alt="CapCut"><span>CapCut</span></a>
+    <a href="https://discord.com"><img src="images/discord.png" alt="Discord"><span>Discord</span></a>
+    <a href="https://github.com"><img src="images/github.png" alt="GitHub"><span>GitHub</span></a>
+    <a href="https://chat.openai.com"><img src="images/chatgpt.png" alt="ChatGPT"><span>ChatGPT</span></a>
+    <a href="https://gemini.google.com"><img src="images/gemini.png" alt="Gemini"><span>Gemini</span></a>
   </div>
 
-  <footer>© 2025 EzzyVerse</footer>
+  <hr>
+
+  <div class="references">
+    <h2>📚 REFERENCES</h2>
+    <p><a href="https://docs.midjourney.com/hc/en-us/articles/32859204029709-Parameter-List?utm_source=chatgpt.com" target="_blank">
+      Midjourney Parameter List (Official)
+    </a></p>
+  </div>
 </body>
 </html>
