--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      background: url('images/background.jpg') no-repeat center center/cover;
+      background: url('images/background.png') no-repeat center center/cover;
       font-family: 'Segoe UI', sans-serif;
       color: white;
       text-align: center;
     }
 
     .glass-panel {
-      background: rgba(0, 0, 0, 0.45); /* semi-transparent dark background */
-      backdrop-filter: blur(6px); /* subtle blur for readability */
-      padding: 20px 40px;
+      background: rgba(0, 0, 0, 0.45);
+      backdrop-filter: blur(6px);
+      padding: 25px 50px;
       border-radius: 20px;
       box-shadow: 0 4px 25px rgba(0, 0, 0, 0.4);
     }
@@ -71,6 +71,14 @@
       letter-spacing: 1px;
     }
 
+    .references h3 {
+      margin-top: 15px;
+      margin-bottom: 8px;
+      font-size: 1rem;
+      color: #a8d8ff;
+      letter-spacing: 0.5px;
+    }
+
     .references a {
       color: #a8d8ff;
       text-decoration: none;
@@ -101,8 +109,26 @@
 
     <div class="references">
       <h2>📚 REFERENCES</h2>
+
+      <h3>🎨 Midjourney</h3>
       <p><a href="https://docs.midjourney.com/hc/en-us/articles/32859204029709-Parameter-List?utm_source=chatgpt.com" target="_blank">
         Midjourney Parameter List (Official)
+      </a></p>
+
+      <h3>🎬 Runway</h3>
+      <p><a href="https://help.runwayml.com/hc/en-us/articles/37053594806419-Creating-with-Gen-4-Image" target="_blank">
+        Creating with Gen-4 Image
+      </a></p>
+      <p><a href="https://academy.runwayml.com/gen4/gen4-references" target="_blank">
+        Gen-4 Reference Guide
+      </a></p>
+
+      <h3>🎵 Suno</h3>
+      <p><a href="https://sunoaiwiki.com/resources/2024-05-13-list-of-metatags/" target="_blank">
+        List of Suno Meta Tags
+      </a></p>
+      <p><a href="https://help.suno.com/en/articles/2477633" target="_blank">
+        How to Use Upload Audio (Help Center)
       </a></p>
     </div>
   </div>
