--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     body {
       margin: 0;
       padding: 0;
-      background: url("images/background.png") no-repeat center center fixed;
+      background: url("images/background.jpg") no-repeat center center fixed;
       background-size: cover;
       font-family: "Poppins", Arial, sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
       backdrop-filter: blur(6px);
     }
@@ -22,6 +22,7 @@
     h1 {
       color: white;
       text-shadow: 0 2px 10px rgba(0,0,0,0.6);
+      margin-top: 50px;
       margin-bottom: 25px;
       font-weight: 600;
       letter-spacing: 1px;
@@ -91,6 +92,7 @@
       gap: 30px;
       width: 80%;
       max-width: 800px;
+      margin-bottom: 60px;
     }
 
     .link-item {
@@ -120,11 +122,50 @@
       text-shadow: 0 1px 3px rgba(0,0,0,0.6);
     }
 
+    /* Reference Table */
+    .reference-table {
+      width: 85%;
+      max-width: 900px;
+      margin-bottom: 60px;
+      border-collapse: collapse;
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 12px;
+      overflow: hidden;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+    }
+
+    .reference-table th {
+      background: rgba(255, 255, 255, 0.12);
+      color: #fff;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      padding: 12px;
+      text-align: center;
+    }
+
+    .reference-table td {
+      padding: 10px 15px;
+      color: rgba(255,255,255,0.9);
+      text-align: center;
+      border-top: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .reference-table a {
+      color: #fff;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .reference-table a:hover {
+      color: #9cf;
+    }
+
     footer {
-      position: fixed;
-      bottom: 10px;
       color: rgba(255,255,255,0.7);
       font-size: 0.8rem;
+      margin-bottom: 20px;
     }
   </style>
 </head>
@@ -139,48 +180,41 @@
     </form>
   </div>
 
-  <!-- Link Grid -->
+  <!-- Main Icon Links -->
   <div class="link-grid">
-    <a class="link-item" href="https://www.midjourney.com">
-      <img src="images/midjourney.png" alt="MidJourney" />
-      <span>MidJourney</span>
-    </a>
-
-    <a class="link-item" href="https://www.suno.ai">
-      <img src="images/suno.png" alt="Suno" />
-      <span>Suno</span>
-    </a>
-
-    <a class="link-item" href="https://www.runwayml.com">
-      <img src="images/runway.png" alt="Runway" />
-      <span>Runway</span>
-    </a>
-
-    <a class="link-item" href="https://www.capcut.com">
-      <img src="images/capcut.png" alt="CapCut" />
-      <span>CapCut</span>
-    </a>
-
-    <a class="link-item" href="https://discord.com">
-      <img src="images/discord.png" alt="Discord" />
-      <span>Discord</span>
-    </a>
-
-    <a class="link-item" href="https://github.com">
-      <img src="images/github.png" alt="GitHub" />
-      <span>GitHub</span>
-    </a>
-
-    <a class="link-item" href="https://chat.openai.com">
-      <img src="images/chatgpt.png" alt="ChatGPT" />
-      <span>ChatGPT</span>
-    </a>
-
-    <a class="link-item" href="https://gemini.google.com">
-      <img src="images/gemini.png" alt="Gemini" />
-      <span>Gemini</span>
-    </a>
+    <a class="link-item" href="https://www.midjourney.com"><img src="images/midjourney.png" alt="MidJourney" /><span>MidJourney</span></a>
+    <a class="link-item" href="https://www.suno.ai"><img src="images/suno.png" alt="Suno" /><span>Suno</span></a>
+    <a class="link-item" href="https://www.runwayml.com"><img src="images/runway.png" alt="Runway" /><span>Runway</span></a>
+    <a class="link-item" href="https://www.capcut.com"><img src="images/capcut.png" alt="CapCut" /><span>CapCut</span></a>
+    <a class="link-item" href="https://discord.com"><img src="images/discord.png" alt="Discord" /><span>Discord</span></a>
+    <a class="link-item" href="https://github.com"><img src="images/github.png" alt="GitHub" /><span>GitHub</span></a>
+    <a class="link-item" href="https://chat.openai.com"><img src="images/chatgpt.png" alt="ChatGPT" /><span>ChatGPT</span></a>
+    <a class="link-item" href="https://gemini.google.com"><img src="images/gemini.png" alt="Gemini" /><span>Gemini</span></a>
   </div>
+
+  <!-- Reference Table -->
+  <table class="reference-table">
+    <tr>
+      <th>Creative Tools</th>
+      <th>AI Tools & Learning</th>
+      <th>Other Resources</th>
+    </tr>
+    <tr>
+      <td><a href="https://www.midjourney.com">MidJourney</a></td>
+      <td><a href="https://chat.openai.com">ChatGPT</a></td>
+      <td><a href="https://www.github.com">GitHub</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://www.runwayml.com">Runway</a></td>
+      <td><a href="https://gemini.google.com">Gemini</a></td>
+      <td><a href="https://www.discord.com">Discord</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://www.suno.ai">Suno</a></td>
+      <td><a href="https://www.capcut.com">CapCut</a></td>
+      <td><a href="https://www.google.com">Google</a></td>
+    </tr>
+  </table>
 
   <footer>© 2025 EzzyVerse</footer>
 </body>
