--- a/index.html
+++ b/index.html
@@ -42,65 +42,31 @@
     }
 
     h1 {
-      margin: 0 0 18px;
+      margin: 0 0 20px;
       font-size: 2rem;
       text-align: center;
       letter-spacing: .5px;
     }
 
-    /* --- Search Bar --- */
+    /* --- Google CSE Container --- */
     .search-bar {
       display: flex;
       justify-content: center;
+      align-items: center;
+      width: 100%;
       margin: 0 auto 28px;
-      width: 100%;
-      max-width: 500px;
-    }
-
-    .search-bar form {
-      display: flex;
-      width: 100%;
-      border-radius: 50px;
+      padding: 8px 0;
       background: rgba(255,255,255,0.12);
-      box-shadow: 0 0 10px rgba(255,255,255,0.15), inset 0 0 6px rgba(255,255,255,0.25);
+      border-radius: 50px;
       backdrop-filter: blur(8px);
-      overflow: hidden;
+      box-shadow: 0 0 10px rgba(255,255,255,0.15), inset 0 0 6px rgba(255,255,255,0.25);
       border: 1px solid rgba(255,255,255,0.3);
-      transition: box-shadow 0.3s ease, border-color 0.3s ease;
     }
 
-    .search-bar form:hover {
-      box-shadow: 0 0 14px rgba(255,255,255,0.35), inset 0 0 8px rgba(255,255,255,0.25);
-      border-color: rgba(255,255,255,0.5);
-    }
-
-    .search-bar input[type="text"] {
-      flex: 1;
-      padding: 10px 18px;
-      font-size: 1rem;
-      color: #fff;
-      background: transparent;
-      border: none;
-      outline: none;
-    }
-
-    .search-bar input::placeholder {
-      color: rgba(255,255,255,0.7);
-    }
-
-    .search-bar button {
-      padding: 0 20px;
-      background: rgba(255,255,255,0.15);
-      border: none;
-      color: #fff;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-
-    .search-bar button:hover {
-      background: rgba(255,255,255,0.3);
-      transform: scale(1.08);
+    /* make embedded search fit nicely */
+    .gcse-search {
+      width: 90%;
+      max-width: 500px;
     }
 
     /* Icon links */
@@ -199,6 +165,7 @@
       .links img { width: 58px; height: 58px; border-radius: 12px; }
       td { display: block; width: 100%; padding: 8px 0; }
       hr { width: 100%; }
+      .gcse-search { width: 100%; }
     }
   </style>
 </head>
@@ -207,12 +174,10 @@
     <div class="glass-panel">
       <h1>🌐 ChromeHome by HoumyVerse</h1>
 
-      <!-- Google Search -->
+      <!-- Google Programmable Search (Autocomplete Enabled) -->
       <div class="search-bar">
-        <form action="https://www.google.com/search" method="GET">
-          <input type="text" name="q" placeholder="Search Google..." />
-          <button type="submit">🔍</button>
-        </form>
+        <script async src="https://cse.google.com/cse.js?cx=6186b120926404782"></script>
+        <div class="gcse-search"></div>
       </div>
 
       <div class="links">
