--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       padding: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: #fff;
-      background: url('images/background.jpg') no-repeat center/cover fixed;
+      background: url('images/background.png') no-repeat center/cover fixed;
     }
 
     body {
