--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       overflow-y: auto;
     }
 
+    /* Container */
     .page {
       display: flex;
       justify-content: center;
@@ -41,29 +42,65 @@
     }
 
     h1 {
-      margin: 0 0 20px;
+      margin: 0 0 18px;
       font-size: 2rem;
       text-align: center;
       letter-spacing: .5px;
     }
 
-    /* --- Google Search --- */
+    /* --- Search Bar --- */
     .search-bar {
       display: flex;
       justify-content: center;
-      width: 100%;
       margin: 0 auto 28px;
-      padding: 8px 0;
-      background: rgba(255,255,255,0.12);
-      border-radius: 50px;
-      backdrop-filter: blur(8px);
-      box-shadow: 0 0 10px rgba(255,255,255,0.15), inset 0 0 6px rgba(255,255,255,0.25);
-      border: 1px solid rgba(255,255,255,0.3);
+      width: 100%;
+      max-width: 500px;
     }
 
-    .gcse-searchbox-only {
-      width: 90%;
-      max-width: 500px;
+    .search-bar form {
+      display: flex;
+      width: 100%;
+      border-radius: 50px;
+      background: rgba(255,255,255,0.12);
+      box-shadow: 0 0 10px rgba(255,255,255,0.15), inset 0 0 6px rgba(255,255,255,0.25);
+      backdrop-filter: blur(8px);
+      overflow: hidden;
+      border: 1px solid rgba(255,255,255,0.3);
+      transition: box-shadow 0.3s ease, border-color 0.3s ease;
+    }
+
+    .search-bar form:hover {
+      box-shadow: 0 0 14px rgba(255,255,255,0.35), inset 0 0 8px rgba(255,255,255,0.25);
+      border-color: rgba(255,255,255,0.5);
+    }
+
+    .search-bar input[type="text"] {
+      flex: 1;
+      padding: 10px 18px;
+      font-size: 1rem;
+      color: #fff;
+      background: transparent;
+      border: none;
+      outline: none;
+    }
+
+    .search-bar input::placeholder {
+      color: rgba(255,255,255,0.7);
+    }
+
+    .search-bar button {
+      padding: 0 20px;
+      background: rgba(255,255,255,0.15);
+      border: none;
+      color: #fff;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+
+    .search-bar button:hover {
+      background: rgba(255,255,255,0.3);
+      transform: scale(1.08);
     }
 
     /* Icon links */
@@ -86,7 +123,6 @@
     }
 
     .links a:hover { transform: scale(1.06); }
-
     .links img {
       width: 72px; height: 72px;
       border-radius: 14px;
@@ -100,6 +136,7 @@
       margin: 22px auto;
     }
 
+    /* References */
     .references h2 {
       margin: 0 0 12px;
       letter-spacing: .6px;
@@ -139,19 +176,29 @@
       margin-bottom: 6px;
     }
 
+    /* --- Desktop centering --- */
     @media (min-width: 1024px) {
-      body { display: flex; align-items: center; justify-content: center; }
-      .page { padding: 40px 0; }
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .page {
+        padding: 40px 0;
+      }
     }
 
+    /* --- Mobile adjustments --- */
     @media (max-width: 720px) {
-      .glass-panel { padding: 18px; border-radius: 16px; }
+      .glass-panel {
+        padding: 18px;
+        border-radius: 16px;
+      }
       h1 { font-size: 1.4rem; }
       .links a { width: 78px; }
       .links img { width: 58px; height: 58px; border-radius: 12px; }
       td { display: block; width: 100%; padding: 8px 0; }
       hr { width: 100%; }
-      .gcse-searchbox-only { width: 100%; }
     }
   </style>
 </head>
@@ -160,15 +207,12 @@
     <div class="glass-panel">
       <h1>🌐 ChromeHome by HoumyVerse</h1>
 
-      <!-- Google Searchbox Only (Autocomplete + Redirects to Google) -->
+      <!-- Google Search -->
       <div class="search-bar">
-        <script async src="https://cse.google.com/cse.js?cx=6186b120926404782"></script>
-        <div class="gcse-searchbox-only"
-             data-enableAutoComplete="true"
-             data-newWindow="false"
-             data-autoCompleteMaxCompletions="8"
-             data-redirectUrl="https://www.google.com/search">
-        </div>
+        <form action="https://www.google.com/search" method="GET">
+          <input type="text" name="q" placeholder="Search Google..." />
+          <button type="submit">🔍</button>
+        </form>
       </div>
 
       <div class="links">
